--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <!-- Bootstrap core CSS -->
     <link href="https://9de2a9bbbdaaf621c7d9afb01457409a8eef9982.googledrive.com/host/0B1fF2_5ZL5oFVmpWUXZwUlNGdDA/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://9de2a9bbbdaaf621c7d9afb01457409a8eef9982.googledrive.com/host/0B1fF2_5ZL5oFVmpWUXZwUlNGdDA/css/font-awesome.min.css" rel="stylesheet">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-72566793-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </head>
 <body onload = "loadXMLDoc()">
     <nav class="navbar navbar-inverse navbar-fixed-top">
